Pending changes in the mainline
===============================

* Fix compilation using Visual Studio
* The "Calling Python..." info logs are disabled if "PythonVerbose" is "false"


Version 1.0 (2020-04-01)
========================

* Initial release