@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 * Fix compilation using Visual Studio
 * The "Calling Python..." info logs are disabled if "PythonVerbose" is "false"
+* New builders for Windows: Supporting 32 / 64bit with Python 2.7 / 3.7 / 3.8
 
 
 Version 1.0 (2020-04-01)
